<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gongmeishan.afinal.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <LinearLayout
                    android:id="@+id/user_name_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="@dimen/spacing_small"
                    >
                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/caption_text_size"
                        android:text="Meishan Gong" />
                    <ImageButton
                        android:id="@+id/edit_basic_info"
                        android:layout_width="@dimen/icon_button_size"
                        android:layout_height="@dimen/icon_button_size"
                        android:src="@drawable/ic_create_black_24dp"
                        android:background="?attr/selectableItemBackground"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="maoyao_1992@hotmail.com" />
            </LinearLayout>

            <ImageView
                android:id="@+id/user_picture"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/profile"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_small">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/caption_text_size"
                android:text="@string/education"
                android:textAllCaps="true"
                android:layout_weight="1" />
            <ImageButton
                android:id="@+id/add_education_btn"
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:src="@drawable/ic_add_black_24dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/add_education"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/educations"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_small">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/caption_text_size"
                android:text="@string/experience"
                android:textAllCaps="true"
                android:layout_weight="1" />
            <ImageButton
                android:id="@+id/add_experience_btn"
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:src="@drawable/ic_add_black_24dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/add_education"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/experiences"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_small">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/caption_text_size"
                android:text="@string/projext"
                android:textAllCaps="true"
                android:layout_weight="1" />
            <ImageButton
                android:id="@+id/add_project_btn"
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:src="@drawable/ic_add_black_24dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/add_education"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/projects"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        </LinearLayout>
    </LinearLayout>
</ScrollView>

